Lesson 10: add cart (web and api)
